force-app/main/default/objects/Reload_Batch__c/Reload_Batch__c.object-meta.xml
<CustomObject>
    <description
  >Represents a batch of records staged by Reload for Salesforce before pushing data into the final target object.</description>
    <label>Reload Data Batch</label>
    <pluralLabel>Reload Data Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <displayFormat>RB-{00000}</displayFormat>
        <label>Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>