force-app/main/default/objects/Reload_Batch__c/fields/Default_Operation__c.field-meta.xml
<CustomField>
    <fullName>Default_Operation__c</fullName>
    <description>Default CRUD operation to apply when pushing staged records into the target object.</description>
    <label>Default Operation</label>
    <picklist>
        <picklistValues>
            <fullName>Insert</fullName>
            <default>true</default>
        </picklistValues>
        <picklistValues>
            <fullName>Update</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Upsert</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Delete</fullName>
        </picklistValues>
        <sorted>true</sorted>
    </picklist>
    <type>Picklist</type>
</CustomField>