force-app/main/default/objects/Reload_Batch__c/fields/Error_Count__c.field-meta.xml
<CustomField>
    <fullName>Error_Count__c</fullName>
    <description
  >Number of staged records that ended with an error.</description>
    <label>Error Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>