force-app/main/default/objects/Reload_Batch__c/fields/External_System__c.field-meta.xml
<CustomField>
    <fullName>External_System__c</fullName>
    <description>Name of the external system that provided the data.</description>
    <label>External System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>