force-app/main/default/objects/Reload_Batch__c/fields/Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Run__c</fullName>
    <description>Date and time of the last execution against this batch.</description>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>