force-app/main/default/objects/Reload_Batch__c/fields/Processed_Records__c.field-meta.xml
<CustomField>
    <fullName>Processed_Records__c</fullName>
    <description>Number of records that have been attempted from the batch.</description>
    <label>Processed Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>