force-app/main/default/objects/Reload_Batch__c/fields/Source_Location__c.field-meta.xml
<CustomField>
    <fullName>Source_Location__c</fullName>
    <description>Reference to the inbound file, endpoint or manual source.</description>
    <label>Source Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>