force-app/main/default/objects/Reload_Batch__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>Type of inbound source that populated the batch.</description>
    <label>Source Type</label>
    <picklist>
        <picklistValues>
            <fullName>CSV</fullName>
            <default>true</default>
        </picklistValues>
        <picklistValues>
            <fullName>Excel</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>JSON</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>External API</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Manual Entry</fullName>
        </picklistValues>
        <sorted>true</sorted>
    </picklist>
    <type>Picklist</type>
</CustomField>