force-app/main/default/objects/Reload_Batch__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>High-level state of the batch lifecycle.</description>
    <label>Status</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <sorted>true</sorted>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>