force-app/main/default/objects/Reload_Batch__c/fields/Target_Object_API__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_API__c</fullName>
    <description
  >API name of the Salesforce object that will receive the staged records.</description>
    <label>Target Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>