force-app/main/default/objects/Reload_Batch__c/fields/Total_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Records__c</fullName>
    <description>Total number of rows imported into the batch.</description>
    <label>Total Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>