force-app/main/default/objects/Reload_Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Target_Object_API__c</columns>
    <columns>Default_Operation__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Total_Records__c</columns>
    <columns>Processed_Records__c</columns>
    <columns>Error_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Reload Batches</label>
</ListView>